# Cadastro-de-cliente-st

./: .gitignore  Cadastro.py  Readme.md  cliente-Larissa-PC.csv  cliente.csv  pyproject.toml
pages/: Consulta.py
